--- a/css/main.css
+++ b/css/main.css
@@ -65,14 +65,17 @@ footer {
 
   #column-1 {
     background-color: #90B3DE;
+    width: 50%;
   }
 
   #column-2 {
     background-color: #657FBF;
+    width: 50%;
   }
 
   #column-3 {
     background-color: #4550A3;
+    width: 100%;
   }
 
   footer {
@@ -90,14 +93,17 @@ footer {
 
   #column-1 {
     background-color: #BA8299;
+    width: 33.3%;
   }
 
   #column-2 {
     background-color: #9E5573;
+    width: 33.3%;
   }
 
   #column-3 {
     background-color: #7D3352;
+    width: 33.3%;
   }
 
   footer {
